manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: simple-love

---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
