manifests/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: simple-love
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: minhlk/k8s-worker:v1.2
