manifests/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: simple-love
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: minhlk/k8s-backend:v1.3
          ports:
            - containerPort: 9000
          resources:
            requests:
              cpu: "100m"
          #   - configMapRef:
          #       name: backend-config

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: simple-love
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9000"
    prometheus.io/path: "/metrics"
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 9000
