manifests/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: simple-love
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mysql:lts
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: simple-love
spec:
  selector:
    app: db
  ports:
    - port: 3306
      targetPort: 3306
